--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
                                                 '<br/>';
                                             }
                                             contentString += '<a href="https://www.google.com/maps/search/?api=1&query=' + markersOnMap[i].LatLng[0].lat + ',' + markersOnMap[i].LatLng[0].lng + '&zoom=2" target="_blank">' +
+                                                '<img src="https://developers.google.com/static/maps/documentation/javascript/images/default-marker.png" height="15px"> ' +
                                                     markersOnMap[i].Direccion +
                                                 '</a>';
                                             
