--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 Icon: "img/icons/lighthouse-ok.png"
             },
             {
-                estado: "none",
+                estado: "poda",
                 placeName: "Alumbrado",
                 Details: "Tapado. Falta Poda",
                 Direccion: "Miño entre Luchessi y Tamareu",
@@ -142,7 +142,7 @@
                     lat: -27.38038067141899,
                     lng: -55.91660929435974
                 }],
-                Icon: "img/icons/lighthouse-no.png"
+                Icon: "img/icons/lighthouse-poda.png"
             },
             {
                 estado: "none",
@@ -179,8 +179,8 @@
                 Expediente: "",
                 Imagen: "img/fotos/alum006.jpeg",
                 LatLng: [{
-                    lat: -27.380543337262555,
-                    lng: -55.918003406606324
+                    lat: -27.3806287,
+                    lng: -55.9177767
                 }],
                 Icon: "img/icons/lighthouse-ok.png"
             },
@@ -456,7 +456,7 @@
 <body>
     <button class="accordion">
         <img src="img/icons/lighthouse-no.png">(1)Alumbrado sin funcionar.
-        <br/><img src="img/icons/lighthouse-no.png">(1)Alumbrado falta poda.
+        <br/><img src="img/icons/lighthouse-poda.png">(1)Alumbrado falta poda.
         <br/><img src="img/icons/lighthouse-no.png">(1)Falta alumbrado.
         <br/><img src="img/icons/trash-no.png">(3) Contenedor a remplazar. 
         <br/><img src="img/icons/road.png">2 cuadras asfaltadas de 19.
