--- a/index.html
+++ b/index.html
@@ -132,19 +132,6 @@
                 Icon: "img/icons/lighthouse-ok.png"
             },
             {
-                estado: "poda",
-                placeName: "Alumbrado",
-                Details: "Tapado. Falta Poda",
-                Direccion: "Miño entre Luchessi y Tamareu",
-                Expediente: "",
-                Imagen: "img/fotos/alum003.jpeg",
-                LatLng: [{
-                    lat: -27.38038067141899,
-                    lng: -55.91660929435974
-                }],
-                Icon: "img/icons/lighthouse-poda.png"
-            },
-            {
                 estado: "none",
                 placeName: "Alumbrado",
                 Details: "Sin funcionar",
@@ -197,6 +184,51 @@
                 }],
                 Icon: "img/icons/lighthouse-no.png"
             },
+
+
+
+            {
+                estado: "poda",
+                placeName: "Alumbrado",
+                Details: "Tapado. Falta Poda",
+                Direccion: "Miño entre Luchessi y Tamareu",
+                Expediente: "",
+                Imagen: "img/fotos/alum003.jpeg",
+                LatLng: [{
+                    lat: -27.38038067141899,
+                    lng: -55.91660929435974
+                }],
+                Icon: "img/icons/lighthouse-poda.png"
+            },
+            {
+                estado: "poda",
+                placeName: "Alumbrado",
+                Details: "Tapado. Falta Poda",
+                Direccion: "Brown casi Miño",
+                Expediente: "",
+                Imagen: "img/fotos/alum003.jpeg",
+                LatLng: [{
+                    lat: -27.379154433867495,
+                    lng: -55.91646454479707
+                }],
+                Icon: "img/icons/lighthouse-poda.png"
+            },
+            {
+                estado: "poda",
+                placeName: "Alumbrado",
+                Details: "Tapado. Falta Poda",
+                Direccion: "Miño, entre Alvár Nuñes y Luchessi",
+                Expediente: "",
+                Imagen: "img/fotos/alum003.jpeg",
+                LatLng: [{
+                    lat: -27.381117644361236,
+                    lng: -55.91657152186928
+                }],
+                Icon: "img/icons/lighthouse-poda.png"
+            },
+             
+
+
 
 
             
@@ -456,7 +488,7 @@
 <body>
     <button class="accordion">
         <img src="img/icons/lighthouse-no.png">(1)Alumbrado sin funcionar.
-        <br/><img src="img/icons/lighthouse-poda.png">(1)Alumbrado falta poda.
+        <br/><img src="img/icons/lighthouse-poda.png">(3)Alumbrado falta poda.
         <br/><img src="img/icons/lighthouse-no.png">(1)Falta alumbrado.
         <br/><img src="img/icons/trash-no.png">(3) Contenedor a remplazar. 
         <br/><img src="img/icons/road.png">2 cuadras asfaltadas de 19.
