--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 estado: "none",
                 placeName: "Contenedor",
                 Details: "Contenedor Roto, por cancha de futbol",
-                Direccion: "Miño y Luchessi hacia Tomas Guido. Al lado de la cancha",
+                Direccion: "Luchessi, pasando Miño hacia Tomas Guido. Al lado de la cancha",
                 Expediente: "",
                 Imagen: "img/fotos/cont001.jpeg",
                 LatLng: [{
