--- a/index.html
+++ b/index.html
@@ -146,17 +146,17 @@
             },
 
             {
-                estado: "ok",
+                estado: "none",
                 placeName: "Alumbrado",
-                Details: "Reparado", //Details: "Sin funcionar",
+                Details: "Arreglaron, pero ya no funcionar despues de una semana",
                 Direccion: "Alvár Nuñes en la cortada Miño",
                 Expediente: "",
-                Imagen: "img/fotos/alum005.jpeg",
+                Imagen: "img/fotos/alum009.jpeg",
                 LatLng: [{
                     lat: -27.381620389779286,
                     lng: -55.916257442615915
                 }],
-                Icon: "img/icons/lighthouse-ok.png"
+                Icon: "img/icons/lighthouse-no.png"
             },
             {
                 estado: "ok",
@@ -487,7 +487,7 @@
 
 <body>
     <button class="accordion">
-        <img src="img/icons/lighthouse-no.png">(1)Alumbrado sin funcionar.
+        <img src="img/icons/lighthouse-no.png">(2)Alumbrado sin funcionar.
         <br/><img src="img/icons/lighthouse-poda.png">(3)Alumbrado falta poda.
         <br/><img src="img/icons/lighthouse-no.png">(1)Falta alumbrado.
         <br/><img src="img/icons/trash-no.png">(3) Contenedor a remplazar. 
