--- a/index.html
+++ b/index.html
@@ -144,7 +144,19 @@
                 }],
                 Icon: "img/icons/lighthouse-no.png"
             },
-
+            {
+                estado: "none",
+                placeName: "Alumbrado",
+                Details: "Se llevaron la lampara",
+                Direccion: "Alvár Nuñes y Padre Serrano",
+                Expediente: "",
+                Imagen: "img/fotos/alum010.jpeg",
+                LatLng: [{
+                    lat: -27.381482423389,
+                    lng: -55.917592333460526
+                }],
+                Icon: "img/icons/lighthouse-no.png"
+            },
             {
                 estado: "none",
                 placeName: "Alumbrado",
@@ -235,7 +247,7 @@
             {
                 estado: "none",
                 placeName: "Contenedor",
-                Details: "Contenedor Roto, por cancha de futbol",
+                Details: "Se llevaron contenedor roto,y no repusieron, por cancha de futbol",
                 Direccion: "Luchessi, pasando Miño hacia Tomas Guido. Al lado de la cancha",
                 Expediente: "",
                 Imagen: "img/fotos/cont001.jpeg",
@@ -487,7 +499,7 @@
 
 <body>
     <button class="accordion">
-        <img src="img/icons/lighthouse-no.png">(2)Alumbrado sin funcionar.
+        <img src="img/icons/lighthouse-no.png">(3)Alumbrado sin funcionar.
         <br/><img src="img/icons/lighthouse-poda.png">(3)Alumbrado falta poda.
         <br/><img src="img/icons/lighthouse-no.png">(1)Falta alumbrado.
         <br/><img src="img/icons/trash-no.png">(3) Contenedor a remplazar. 
