--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     lat: -27.381538250609964,
                     lng: -55.91751946140226
                 }],
-                Icon: "img/icons/lighthouse-no.png"
+                Icon: "img/icons/lighthouse-ni.png"
             },
 
 
@@ -501,7 +501,7 @@
     <button class="accordion">
         <img src="img/icons/lighthouse-no.png">(3)Alumbrado sin funcionar.
         <br/><img src="img/icons/lighthouse-poda.png">(3)Alumbrado falta poda.
-        <br/><img src="img/icons/lighthouse-no.png">(1)Falta alumbrado.
+        <br/><img src="img/icons/lighthouse-ni.png">(1)Falta alumbrado.
         <br/><img src="img/icons/trash-no.png">(3) Contenedor a remplazar. 
         <br/><img src="img/icons/road.png">2 cuadras asfaltadas de 19.
     </button>
